--- a/Index.html
+++ b/Index.html
@@ -6,20 +6,21 @@
 
 </head>
 <style>
-	input{
-		align: right;
-	}
+	
 </style>
 <body>
-<div>
-	<h1>BINGO</h1>
-    <form>
-		Kuinka monta ruudukkoa haluat?<input type="text" name="lkmRuudukko"></br>
-		Kuinka ison ruudukon haluat?(esim. syöte 5 tekee 5x5 ruudukon)<input type="text" name="ruudukonKoko"></br>
-		Kuinka ison numeroskaalan haluat?(Huom oltava vähintään yhtä iso kuin ruudukon koko)<input type="text" name="numeroSkaala"></br>
-		<input type="submit" value="Submit form" onclick= "ruudukko()">
-	</form>
+	<div>
+		<h1>BINGO</h1>
+		
+			Kuinka monta ruudukkoa haluat?</br></br><input type="text" id="numberOfGrids"></br></br>
+			Kuinka ison ruudukon haluat?(esim. syöte 5 tekee 5x5 ruudukon)</br></br><input type="text" id="size"></br></br>
+			Kuinka ison numeroskaalan haluat?(Huom oltava vähintään yhtä iso kuin ruudukon koko)</br></br>
+			Pienin numero</br></br>  <input type="text" id="scaleMin"></br></br>
+			Suurin numero</br></br>  <input type="text" id="scaleMax"></br></br>
+			<button onclick= "createGrid()">Luo ruudukot</button>
+		
 	</div>
+	<div id="grids"></div>
    
 	<script src="app.js"></script>
 	
